#3638 [Feature Request] Allow configuration of Database connection pool from container server (Tomcat, Jetty, WildFly) https://github.com/adempiere/adempiere/issues/3638 - Adding setting IntelliJ and Scala to testing Tomcat and Jetty - Improve the log message - Create the deployment standard directory for Tomcat and Jetty